# zotero-local-tts

./: .gitignore  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  pyproject.toml
benchmarks/: README.md  academic_excerpt.txt  benchmark_qwen.py
docs/: ADR-0001-zotero-read-aloud-integration.md  M0_RESULTS.md  M1_5_RESULTS.md  M2_RESULTS.md  M3_RESULTS.md  SPEC.md  THIRD_PARTY.md
scripts/: build-xpi.sh
src/zotero_local_tts/: __init__.py  app.py  cli.py  config.py  engine.py  service.py
tests/: test_app.py  test_config.py  test_integration_mlx.py  test_service.py  test_zotero_bootstrap.mjs  test_zotero_plugin.py
zotero-plugin/: bootstrap.js  manifest.json
