[project]
name = "zotero-local-tts"
version = "0.1.0"
description = "Local Qwen3-TTS service and Zotero 9 integration"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = "Apache-2.0"
dependencies = [
  "fastapi>=0.139",
  "mlx-audio==0.4.5",
  "numpy>=2.0",
  "psutil>=6.0",
  "soundfile>=0.13",
  "uvicorn>=0.51",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zotero_local_tts"]

[project.scripts]
zotero-local-tts = "zotero_local_tts.cli:main"

[project.urls]
Repository = "https://github.com/NightLightTw/zotero-local-tts"
Issues = "https://github.com/NightLightTw/zotero-local-tts/issues"

[dependency-groups]
dev = [
  "pytest>=8.3",
  "ruff>=0.9",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
